added more yaml scripts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,19 +18,25 @@ test:
     steps:
     # Get code from repo
     - name: Checkout code
-        uses: actions/checkout@v1
+    uses: actions/checkout@v1
 
     - name: Use Node.js 21.x
-        uses: actions/setup-node@v1
-        with:
+    uses: actions/setup-node@v1
+    with:
         node-version: 21.x
 
     # Install dependencies
     - name: 🧰 install deps
-        run: npm install
+    run: npm install
         
     # Run lint
     - name: Run lint
-        run: npm run lint
+    run: npm run lint
     
-    # Empty comment
+    # Run build
+    - name: Run Build
+    run: npm run build
+
+    # Run tests
+    - name: Run Tests
+    run: npm run test
